[-->new] Added signup, signup-verification apis and docs
