# docs/swagger.json
@@ -10,45 +10,115 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "https://auth-iamrz1.cloud.okteto.net",
     "basePath": "/",
-    "paths": {},
-    "definitions": {
-        "model.Customer": {
-            "type": "object",
-            "properties": {
-                "birth_date": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "full_name": {
-                    "type": "string"
-                },
-                "gender": {
-                    "type": "string"
-                },
-                "is_deleted": {
-                    "type": "boolean"
-                },
-                "is_verified": {
-                    "type": "boolean"
-                },
-                "recovery_phone_number": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
+    "paths": {
+        "/api/v1/public/customers/signup": {
+            "post": {
+                "description": "Signup a new new customer for a valid non-existing phone number",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Signup a new customer",
+                "parameters": [
+                    {
+                        "description": "All fields are mandatory",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomerSignupReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.EmptySuccessRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.CustomerErrorRes"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.CustomerErrorRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.CustomerErrorRes"
+                        }
+                    }
                 }
             }
         },
+        "/api/v1/public/customers/verify-signup": {
+            "post": {
+                "description": "VerifySignUp uses user defined otp and matches it with existing reference in cache to verify a signup",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Verify a new customer using otp",
+                "parameters": [
+                    {
+                        "description": "All fields are mandatory",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomerSignupVerificationReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.EmptySuccessRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.CustomerErrorRes"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.CustomerErrorRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.CustomerErrorRes"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
         "model.CustomerSignupReq": {
             "type": "object",
             "properties": {
@@ -69,16 +139,19 @@
                 }
             }
         },
-        "model.EmptyObject": {
-            "type": "object"
-        },
-        "response.CustomerData": {
+        "model.CustomerSignupVerificationReq": {
             "type": "object",
             "properties": {
-                "object": {
-                    "$ref": "#/definitions/model.Customer"
+                "otp": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
+        },
+        "model.EmptyObject": {
+            "type": "object"
         },
         "response.CustomerErrData": {
             "type": "object",
@@ -104,11 +177,19 @@
                 }
             }
         },
-        "response.CustomerSuccessRes": {
+        "response.EmptySuccessData": {
+            "type": "object",
+            "properties": {
+                "object": {
+                    "$ref": "#/definitions/model.EmptyObject"
+                }
+            }
+        },
+        "response.EmptySuccessRes": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.CustomerData"
+                    "$ref": "#/definitions/response.EmptySuccessData"
                 },
                 "message": {
                     "type": "string",
@@ -116,7 +197,7 @@
                 },
                 "success": {
                     "type": "boolean",
-                    "example": true
+                    "example": false
                 }
             }
         }
